Add QEMU and ARGP options

--- a/sysutils/glusterfs/Makefile
+++ b/sysutils/glusterfs/Makefile
@@ -12,16 +12,16 @@ COMMENT=	GlusterFS distributed file system
 LICENSE=	GPLv2 LGPL3
 LICENSE_COMB=	dual
 
-LIB_DEPENDS=	libargp.so:${PORTSDIR}/devel/argp-standalone liburcu-bp.so:${PORTSDIR}/sysutils/liburcu
+LIB_DEPENDS=	liburcu-bp.so:${PORTSDIR}/sysutils/liburcu
 
 USE_GCC=	any
 
-USES=		bison gettext libtool pkgconfig python:build readline \
-		shebangfix
+USES=		bison:build gettext libtool:build pkgconfig:build \
+		python:build readline shebangfix
 SHEBANG_FILES=	extras/peer_add_secret_pub.in \
 		tools/glusterfind/S57glusterfind-delete-post.py \
 		extras/ganesha/scripts/ganesha-ha.sh
-USE_GNOME=	glib20 libxml2
+USE_GNOME=	libxml2
 USE_LDCONFIG=	yes
 USE_OPENSSL=	yes
 USE_SQLITE=	yes
@@ -36,9 +36,29 @@ CONFIGURE_ARGS=	--with-pkgconfigdir=${PREFIX}/libdata/pkgconfig \
 		ac_cv_lib_aio_io_setup=no ac_cv_func_fallocate=no \
 		ac_cv_func_setfsuid=no 	ac_cv_func_fdatasync=no \
 		ac_cv_func_llistxattr=no ac_cv_func_malloc_stats=no
-CPPFLAGS+=	-I"${LOCALBASE}/include"
-LDFLAGS+=	-L"${LOCALBASE}/lib" -largp
 INSTALL_TARGET=	install-strip
 PLIST_SUB=	GLUSTERLIBDIR="${PREFIX}/lib/${PORTNAME}/${PORTVERSION}"
 
-.include <bsd.port.mk>
+OPTIONS_DEFINE=	ARGP QEMU
+OPTIONS_DEFAULT=QEMU
+ARGP_DESC=	Use devel/argp-standalone instead of bundled one
+QEMU_DESC=	QEMU Block formats support
+
+.include <bsd.port.options.mk>
+
+.if ${PORT_OPTIONS:MARGP}
+LIB_DEPENDS+=	libargp.so:${PORTSDIR}/devel/argp-standalone 
+CPPFLAGS+=	-I"${LOCALBASE}/include"
+LDFLAGS+=	-L"${LOCALBASE}/lib" -largp
+.endif
+
+.if ${PORT_OPTIONS:MQEMU}
+USE_GNOME+=	glib20
+CONFIGURE_ARGS+=	--enable-qemu-block
+PLIST_SUB+=	QEMU=""
+.else
+CONFIGURE_ARGS+=	--disable-qemu-block
+PLIST_SUB+=	QEMU="@comment "
+.endif
+
+.include <bsd.port.post.mk>
