Change the way to install /usr/sbin/mount_glusterfs

--- a/sysutils/glusterfs/Makefile
+++ b/sysutils/glusterfs/Makefile
@@ -66,4 +66,7 @@ CONFIGURE_ARGS+=	--disable-qemu-block
 PLIST_SUB+=	QEMU="@comment "
 .endif
 
+post-install:
+	@${LN} -sf ${PREFIX}/sbin/mount_glusterfs /usr/sbin
+
 .include <bsd.port.mk>
