Remove unnecessary version check code.

--- a/databases/mysql-utilities/Makefile
+++ b/databases/mysql-utilities/Makefile
@@ -16,27 +16,21 @@ USE_PYTHON=	distutils autoplist
 
 SHEBANG_FILES=	scripts/*.py
 
-# Create a 6 integer version string.
-MYSQLUTIL_REL=	${PORTVERSION:C/^([0-9]+\.[0-9]+\.[0-9]+).*/\1/:C/([0-9]+)/0\1/g:C/0?([0-9][0-9])/\1/g:S/.//g}
-.if ${MYSQLUTIL_REL} < 010602
 SAMPLE_FILES=	etc/mysql/fabric.cfg
-POST_PLIST=	process-sample-files
-.endif
+POST_PLIST+=	process-sample-files
+
 .include <bsd.port.options.mk>
 
 post-patch:
 	@${REINPLACE_CMD} -e "s!'/etc'!'${PREFIX}/etc'!" ${WRKSRC}/setup.py
 
-.if ${MYSQLUTIL_REL} < 010602
 process-sample-files:
-.	for _file in ${SAMPLE_FILES}
-	@cd ${STAGEDIR}${PREFIX}; \
-		if [ -e ${_file} ]; then \
-			${MV} ${_file} ${_file}.sample; \
-			${REINPLACE_CMD} -e 's|^\(${_file}\)$$|@sample \1.sample|' ${TMPPLIST}; \
-		fi
-.	endfor
-.endif
+.for _file in ${SAMPLE_FILES:C|^|${STAGEDIR}${PREFIX}/|}
+	@if [ -e ${_file} ]; then \
+		${MV} ${_file} ${_file}.sample; \
+		${REINPLACE_CMD} -e 's|^\(${_file}\)$$|@sample \1.sample|' ${TMPPLIST}; \
+	fi
+.endfor
 
 .include <bsd.port.pre.mk>
 
