Add NO_ARCH=yes to suppress "no architecture specific files fount" warning.

--- a/databases/mysql-utilities/Makefile
+++ b/databases/mysql-utilities/Makefile
@@ -11,6 +11,8 @@ COMMENT=	MySQL management utilities
 
 LICENSE=	GPLv2
 
+NO_ARCH=	yes
+
 USES=		python:2 shebangfix
 USE_PYTHON=	distutils autoplist
 
